--- a/index.html
+++ b/index.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HelloDenna!</title>
+    <link rel="stylesheet" href="./style/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
-    <p>Hello there!👋</p>
+    <nav>
+        <div class="buttonNav">
+            <ul>
+                <li><a href=""></a>Home</li>
+                <li><a href=""></a>Product</li>
+                <li><a href=""></a>contact</li>
+            </ul>
+        </div>
+    </nav>
+    <div class="container">
+        <div class="contImage"> <img src="/img/cupcoffe.png" alt="coffe"> </div>
+        <div class="contText">
+            <h1>You need is Coffe</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor qui repellendus delectus voluptate iure dolorum, molestiae cum, id praesentium natus soluta, rem inventore ea ab aliquam illum quibusdam tempore quas!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, veritatis. Totam quo amet vitae quas laudantium! Libero, rem quas natus sed nemo ea. Tempore beatae libero quidem incidunt quam cupiditate porro rerum molestiae voluptatem maiores doloribus fuga aperiam totam facilis, suscipit voluptas blanditiis magni delectus.</p>
+        </div>
+    </div>
 </body>
 </html>
