add sticky navbar

--- a/index.html
+++ b/index.html
@@ -1,29 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HelloDenna!</title>
-    <link rel="stylesheet" href="./style/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>NAVBAR</title>
+    <link rel="stylesheet" href="./style/styleNav.css" />
+    <link rel="stylesheet" href="./style/styleMain.css" />
+  </head>
+  <body>
+    <header>
+      <div id="welcome">
+        <h1>WELCOME</h1>
+        <p>Of course I love U</p>
+      </div>
+    </header>
     <nav>
-        <div class="buttonNav">
-            <ul>
-                <li><a href=""></a>Home</li>
-                <li><a href=""></a>Product</li>
-                <li><a href=""></a>contact</li>
-            </ul>
-        </div>
+      <div class="logo">
+        <h4>Aldinnasrun</h4>
+      </div>
+      <ul>
+        <li><a href="">Home</a></li>
+        <li><a href="">Product</a></li>
+        <li><a href="">Galery</a></li>
+        <li><a href="">Shop</a></li>
+        <li><a href="">About</a></li>
+      </ul>
+      <div class="menu-toggle">
+        <input type="checkbox" name="check" id="" />
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
     </nav>
-    <div class="container">
-        <div class="contImage"> <img src="/img/cupcoffe.png" alt="coffe"> </div>
-        <div class="contText">
-            <h1>You need is Coffe</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor qui repellendus delectus voluptate iure dolorum, molestiae cum, id praesentium natus soluta, rem inventore ea ab aliquam illum quibusdam tempore quas!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, veritatis. Totam quo amet vitae quas laudantium! Libero, rem quas natus sed nemo ea. Tempore beatae libero quidem incidunt quam cupiditate porro rerum molestiae voluptatem maiores doloribus fuga aperiam totam facilis, suscipit voluptas blanditiis magni delectus.</p>
-        </div>
-    </div>
-</body>
+    <main>
+      <div id="mainArticle">
+        <h3>Lorem ipsum dolor sit.</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo labore
+          molestiae omnis, eligendi amet dicta deleniti qui repudiandae
+          doloribus ipsam. Temporibus debitis, quasi aliquam dolorem quia
+          pariatur inventore quo, dolore ut animi numquam culpa asperiores
+          commodi illum eaque repudiandae ab. Quibusdam exercitationem quis
+          labore eius.
+        </p>
+      </div>
+      <div id="mainArticle">
+        <h3>Lorem ipsum dolor sit.</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo labore
+          molestiae omnis, eligendi amet dicta deleniti qui repudiandae
+          doloribus ipsam. Temporibus debitis, quasi aliquam dolorem quia
+          pariatur inventore quo, dolore ut animi numquam culpa asperiores
+          commodi illum eaque repudiandae ab. Quibusdam exercitationem quis
+          labore eius.
+        </p>
+      </div>
+      <div id="mainArticle">
+        <h3>Lorem ipsum dolor sit.</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo labore
+          molestiae omnis, eligendi amet dicta deleniti qui repudiandae
+          doloribus ipsam. Temporibus debitis, quasi aliquam dolorem quia
+          pariatur inventore quo, dolore ut animi numquam culpa asperiores
+          commodi illum eaque repudiandae ab. Quibusdam exercitationem quis
+          labore eius.
+        </p>
+      </div>
+      <div id="mainArticle">
+        <h3>Lorem ipsum dolor sit.</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo labore
+          molestiae omnis, eligendi amet dicta deleniti qui repudiandae
+          doloribus ipsam. Temporibus debitis, quasi aliquam dolorem quia
+          pariatur inventore quo, dolore ut animi numquam culpa asperiores
+          commodi illum eaque repudiandae ab. Quibusdam exercitationem quis
+          labore eius.
+        </p>
+      </div>
+      <div id="mainArticle">
+        <h3>Lorem ipsum dolor sit.</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo labore
+          molestiae omnis, eligendi amet dicta deleniti qui repudiandae
+          doloribus ipsam. Temporibus debitis, quasi aliquam dolorem quia
+          pariatur inventore quo, dolore ut animi numquam culpa asperiores
+          commodi illum eaque repudiandae ab. Quibusdam exercitationem quis
+          labore eius.
+        </p>
+      </div>
+      <div id="mainArticle">
+        <h3>Lorem ipsum dolor sit.</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo labore
+          molestiae omnis, eligendi amet dicta deleniti qui repudiandae
+          doloribus ipsam. Temporibus debitis, quasi aliquam dolorem quia
+          pariatur inventore quo, dolore ut animi numquam culpa asperiores
+          commodi illum eaque repudiandae ab. Quibusdam exercitationem quis
+          labore eius.
+        </p>
+      </div>
+    </main>
+    <script src="./script/script.js"></script>
+  </body>
 </html>
