add love button, image and animation

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
       <ul>
         <li><a href="">Home</a></li>
-        <li><a href="">Product</a></li>
+        <li><a href="#mainArticle 3">Product</a></li>
         <li><a href="">Galery</a></li>
         <li><a href="">Shop</a></li>
         <li><a href="">About</a></li>
@@ -33,72 +33,70 @@
       </div>
     </nav>
     <main>
-      <div id="mainArticle">
+      <div id="profile">
+        <div class="textProfile">
+          <h1>Halo saya Aldin.🖐️</h1>
+          <p>Geser lagi kebawah</p>
+        </div>
+        <div class="picProfile">
+          <div class="subtitle"><i>"click heart if u like me"</i></div>
+          <div class="love">
+            <img src="./img/love-icon.svg" alt="love-image" />
+          </div>
+        </div>
+      </div>
+      <section id="product">
+        <h1>Saya punya sesuatu yang menarik disini</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
+          quaerat minus veniam, sunt dolore perferendis at ea ipsam a modi,
+          omnis odio, eum explicabo adipisci quo illo veritatis alias accusamus
+          autem? Voluptatem quasi, debitis esse fugiat doloribus magni ipsam
+          soluta error voluptatum porro deleniti sapiente explicabo similique,
+          commodi quis architecto libero pariatur nobis nihil. Minus qui error
+          eius debitis ipsam necessitatibus nemo vero. Non saepe nihil facere
+          eum veniam!
+        </p>
+      </section>
+      <section id="galery">
         <h3>Lorem ipsum dolor sit.</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo labore
-          molestiae omnis, eligendi amet dicta deleniti qui repudiandae
-          doloribus ipsam. Temporibus debitis, quasi aliquam dolorem quia
-          pariatur inventore quo, dolore ut animi numquam culpa asperiores
-          commodi illum eaque repudiandae ab. Quibusdam exercitationem quis
-          labore eius.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
+          quaerat minus veniam, sunt dolore perferendis at ea ipsam a modi,
+          omnis odio, eum explicabo adipisci quo illo veritatis alias accusamus
+          autem? Voluptatem quasi, debitis esse fugiat doloribus magni ipsam
+          soluta error voluptatum porro deleniti sapiente explicabo similique,
+          commodi quis architecto libero pariatur nobis nihil. Minus qui error
+          eius debitis ipsam necessitatibus nemo vero. Non saepe nihil facere
+          eum veniam!
         </p>
-      </div>
-      <div id="mainArticle">
+      </section>
+      <section id="shop">
         <h3>Lorem ipsum dolor sit.</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo labore
-          molestiae omnis, eligendi amet dicta deleniti qui repudiandae
-          doloribus ipsam. Temporibus debitis, quasi aliquam dolorem quia
-          pariatur inventore quo, dolore ut animi numquam culpa asperiores
-          commodi illum eaque repudiandae ab. Quibusdam exercitationem quis
-          labore eius.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
+          quaerat minus veniam, sunt dolore perferendis at ea ipsam a modi,
+          omnis odio, eum explicabo adipisci quo illo veritatis alias accusamus
+          autem? Voluptatem quasi, debitis esse fugiat doloribus magni ipsam
+          soluta error voluptatum porro deleniti sapiente explicabo similique,
+          commodi quis architecto libero pariatur nobis nihil. Minus qui error
+          eius debitis ipsam necessitatibus nemo vero. Non saepe nihil facere
+          eum veniam!
         </p>
-      </div>
-      <div id="mainArticle">
+      </section>
+      <section id="about">
         <h3>Lorem ipsum dolor sit.</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo labore
-          molestiae omnis, eligendi amet dicta deleniti qui repudiandae
-          doloribus ipsam. Temporibus debitis, quasi aliquam dolorem quia
-          pariatur inventore quo, dolore ut animi numquam culpa asperiores
-          commodi illum eaque repudiandae ab. Quibusdam exercitationem quis
-          labore eius.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
+          quaerat minus veniam, sunt dolore perferendis at ea ipsam a modi,
+          omnis odio, eum explicabo adipisci quo illo veritatis alias accusamus
+          autem? Voluptatem quasi, debitis esse fugiat doloribus magni ipsam
+          soluta error voluptatum porro deleniti sapiente explicabo similique,
+          commodi quis architecto libero pariatur nobis nihil. Minus qui error
+          eius debitis ipsam necessitatibus nemo vero. Non saepe nihil facere
+          eum veniam!
         </p>
-      </div>
-      <div id="mainArticle">
-        <h3>Lorem ipsum dolor sit.</h3>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo labore
-          molestiae omnis, eligendi amet dicta deleniti qui repudiandae
-          doloribus ipsam. Temporibus debitis, quasi aliquam dolorem quia
-          pariatur inventore quo, dolore ut animi numquam culpa asperiores
-          commodi illum eaque repudiandae ab. Quibusdam exercitationem quis
-          labore eius.
-        </p>
-      </div>
-      <div id="mainArticle">
-        <h3>Lorem ipsum dolor sit.</h3>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo labore
-          molestiae omnis, eligendi amet dicta deleniti qui repudiandae
-          doloribus ipsam. Temporibus debitis, quasi aliquam dolorem quia
-          pariatur inventore quo, dolore ut animi numquam culpa asperiores
-          commodi illum eaque repudiandae ab. Quibusdam exercitationem quis
-          labore eius.
-        </p>
-      </div>
-      <div id="mainArticle">
-        <h3>Lorem ipsum dolor sit.</h3>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo labore
-          molestiae omnis, eligendi amet dicta deleniti qui repudiandae
-          doloribus ipsam. Temporibus debitis, quasi aliquam dolorem quia
-          pariatur inventore quo, dolore ut animi numquam culpa asperiores
-          commodi illum eaque repudiandae ab. Quibusdam exercitationem quis
-          labore eius.
-        </p>
-      </div>
+      </section>
     </main>
     <script src="./script/script.js"></script>
   </body>
