create profile and product page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>NAVBAR</title>
     <link rel="stylesheet" href="./style/styleNav.css" />
     <link rel="stylesheet" href="./style/styleMain.css" />
+    <link rel="stylesheet" href="./style/font-awesome.min.css" />
   </head>
   <body>
     <header>
@@ -20,8 +21,8 @@
       </div>
       <ul>
         <li><a href="">Home</a></li>
-        <li><a href="#mainArticle 3">Product</a></li>
-        <li><a href="">Galery</a></li>
+        <li><a href="#profile">Product</a></li>
+        <li><a href="#galery">Galery</a></li>
         <li><a href="">Shop</a></li>
         <li><a href="">About</a></li>
       </ul>
@@ -35,8 +36,8 @@
     <main>
       <div id="profile">
         <div class="textProfile">
-          <h1>Halo saya Aldin.🖐️</h1>
-          <p>Geser lagi kebawah</p>
+          <h1>Hello I'am Aldin</h1>
+          <p>scroll down for more</p>
         </div>
         <div class="picProfile">
           <div class="subtitle"><i>"click heart if u like me"</i></div>
@@ -46,30 +47,30 @@
         </div>
       </div>
       <section id="product">
-        <h1>Saya punya sesuatu yang menarik disini</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-          quaerat minus veniam, sunt dolore perferendis at ea ipsam a modi,
-          omnis odio, eum explicabo adipisci quo illo veritatis alias accusamus
-          autem? Voluptatem quasi, debitis esse fugiat doloribus magni ipsam
-          soluta error voluptatum porro deleniti sapiente explicabo similique,
-          commodi quis architecto libero pariatur nobis nihil. Minus qui error
-          eius debitis ipsam necessitatibus nemo vero. Non saepe nihil facere
-          eum veniam!
-        </p>
+        <h1 id="titleApp">What I use?</h1>
+        <div class="iconApp">
+          <span><img src="./img/figma.svg" alt="figma" /></span>
+          <span><img src="./img/inkscape.svg" alt="inkscape" /></span>
+          <span><img src="./img/vscode.svg" alt="vscode" /></span>
+          <span><img src="./img/spotify-only.svg" alt="spotify" /></span>
+        </div>
+        <div class="iconSocial">
+          <a href="www.twitter.com/bakulanberas">
+            <i class="fa fa-twitter fa-2x" aria-hidden="true"></i
+          ></a>
+          <a href="www.instagram.com/aldin.na">
+            <i class="fa fa-instagram fa-2x" aria-hidden="true"></i
+          ></a>
+          <a href="#">
+            <i class="fa fa-envelope-o fa-2x" aria-hidden="true"></i
+          ></a>
+          <a href="t.me/al_nasrun"
+            ><i class="fa fa-telegram fa-2x" aria-hidden="true"></i
+          ></a>
+        </div>
       </section>
       <section id="galery">
-        <h3>Lorem ipsum dolor sit.</h3>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-          quaerat minus veniam, sunt dolore perferendis at ea ipsam a modi,
-          omnis odio, eum explicabo adipisci quo illo veritatis alias accusamus
-          autem? Voluptatem quasi, debitis esse fugiat doloribus magni ipsam
-          soluta error voluptatum porro deleniti sapiente explicabo similique,
-          commodi quis architecto libero pariatur nobis nihil. Minus qui error
-          eius debitis ipsam necessitatibus nemo vero. Non saepe nihil facere
-          eum veniam!
-        </p>
+        <h1>There is some interesting</h1>
       </section>
       <section id="shop">
         <h3>Lorem ipsum dolor sit.</h3>
