--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./style/styleNav.css" />
     <link rel="stylesheet" href="./style/styleMain.css" />
     <link rel="stylesheet" href="./style/font-awesome.min.css" />
+    <link rel="stylesheet" href="./style/glider.min.css" />
   </head>
   <body>
     <header>
@@ -70,7 +71,30 @@
         </div>
       </section>
       <section id="galery">
-        <h1>There is some interesting</h1>
+        <h1 id="title">Game Room</h1>
+        <div class="glider">
+          <div id="card">
+            <h1>TITLE HERE</h1>
+          </div>
+          <div id="card">
+            <h1>TITLE HERE</h1>
+          </div>
+          <div id="card">
+            <h1>TITLE HERE</h1>
+          </div>
+          <div id="card">
+            <h1>TITLE HERE</h1>
+          </div>
+          <div id="card">
+            <h1>TITLE HERE</h1>
+          </div>
+          <div id="card">
+            <h1>TITLE HERE</h1>
+          </div>
+          <div id="card">
+            <h1>TITLE HERE</h1>
+          </div>
+        </div>
       </section>
       <section id="shop">
         <h3>Lorem ipsum dolor sit.</h3>
@@ -99,6 +123,8 @@
         </p>
       </section>
     </main>
+    <script src="./script/glider.min.js"></script>
     <script src="./script/script.js"></script>
+    <script></script>
   </body>
 </html>
