add styling #quote #about and footer- almost 90% done

--- a/index.html
+++ b/index.html
@@ -55,20 +55,6 @@
           <span><img src="./img/vscode.svg" alt="vscode" /></span>
           <span><img src="./img/spotify-only.svg" alt="spotify" /></span>
         </div>
-        <div class="iconSocial">
-          <a href="www.twitter.com/bakulanberas">
-            <i class="fa fa-twitter fa-2x" aria-hidden="true"></i
-          ></a>
-          <a href="www.instagram.com/aldin.na">
-            <i class="fa fa-instagram fa-2x" aria-hidden="true"></i
-          ></a>
-          <a href="#">
-            <i class="fa fa-envelope-o fa-2x" aria-hidden="true"></i
-          ></a>
-          <a href="t.me/al_nasrun"
-            ><i class="fa fa-telegram fa-2x" aria-hidden="true"></i
-          ></a>
-        </div>
       </section>
       <section id="galery">
         <h1 id="title">Game Room</h1>
@@ -96,35 +82,43 @@
           </div>
         </div>
       </section>
-      <section id="shop">
-        <h3>Lorem ipsum dolor sit.</h3>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-          quaerat minus veniam, sunt dolore perferendis at ea ipsam a modi,
-          omnis odio, eum explicabo adipisci quo illo veritatis alias accusamus
-          autem? Voluptatem quasi, debitis esse fugiat doloribus magni ipsam
-          soluta error voluptatum porro deleniti sapiente explicabo similique,
-          commodi quis architecto libero pariatur nobis nihil. Minus qui error
-          eius debitis ipsam necessitatibus nemo vero. Non saepe nihil facere
-          eum veniam!
-        </p>
+      <section id="quote">
+        <span>
+          <h1>LET'S COLABORATE</h1>
+          <p>
+            <i>the secret of getting ahead is getting started.</i>
+          </p>
+        </span>
       </section>
       <section id="about">
-        <h3>Lorem ipsum dolor sit.</h3>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-          quaerat minus veniam, sunt dolore perferendis at ea ipsam a modi,
-          omnis odio, eum explicabo adipisci quo illo veritatis alias accusamus
-          autem? Voluptatem quasi, debitis esse fugiat doloribus magni ipsam
-          soluta error voluptatum porro deleniti sapiente explicabo similique,
-          commodi quis architecto libero pariatur nobis nihil. Minus qui error
-          eius debitis ipsam necessitatibus nemo vero. Non saepe nihil facere
-          eum veniam!
-        </p>
+        <span>
+          <p>If you interest to talk more with me, just hit the icons bellow</p>
+        </span>
+        <div class="iconSocial">
+          <a href="www.twitter.com/bakulanberas">
+            <i class="fa fa-twitter fa-2x" aria-hidden="true"></i
+          ></a>
+          <a href="www.instagram.com/aldin.na">
+            <i class="fa fa-instagram fa-2x" aria-hidden="true"></i
+          ></a>
+          <a href="#">
+            <i class="fa fa-envelope-o fa-2x" aria-hidden="true"></i
+          ></a>
+          <a href="t.me/al_nasrun"
+            ><i class="fa fa-telegram fa-2x" aria-hidden="true"></i
+          ></a>
+        </div>
       </section>
     </main>
+    <footer>
+      <p>
+        <i>
+          <p>Create with 💙 by Aldin Nasrun</p>
+        </i>
+      </p>
+    </footer>
+    <!-- script place!!! -->
     <script src="./script/glider.min.js"></script>
     <script src="./script/script.js"></script>
-    <script></script>
   </body>
 </html>
